[gd_scene load_steps=8 format=3 uid="uid://1r5etmqb4pgg"]

[ext_resource type="Script" uid="uid://bhpnfs1qhb162" path="res://telas/interface/dicas/pop_up_dicas.gd" id="1_nnvat"]
[ext_resource type="Texture2D" uid="uid://b30qdtbtfg03l" path="res://telas/interface/assets/imagens/pop_up_menssagem.png" id="2_iskqg"]
[ext_resource type="Texture2D" uid="uid://c5jpsv4oqpnmx" path="res://telas/interface/assets/imagens/mascote_padrao.png" id="3_a7hdw"]
[ext_resource type="Texture2D" uid="uid://jp1oykrsqgc" path="res://telas/interface/assets/imagens/pop_up_audio.png" id="4_ehml4"]
[ext_resource type="Theme" uid="uid://dv6ojfjvk877o" path="res://telas/interface/assets/temas/tema_botao_audio.tres" id="5_iskqg"]
[ext_resource type="Theme" uid="uid://cy5rvrhoo14d8" path="res://telas/interface/assets/temas/tema_flecha_voltar.tres" id="6_a7hdw"]
[ext_resource type="Texture2D" uid="uid://bepd6haiepykj" path="res://telas/interface/assets/imagens/pop_up_flecha.png" id="7_ehml4"]

[node name="PopUpDicas" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.278
offset_bottom = -0.240021
grow_horizontal = 2
script = ExtResource("1_nnvat")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PopUpTexto" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.245833
anchor_top = 0.223333
anchor_right = 0.938722
anchor_bottom = 0.946667
offset_right = 0.119995
offset_bottom = -1.52588e-05
texture = ExtResource("2_iskqg")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Mascote" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.115278
anchor_top = 0.06
anchor_right = 0.410167
anchor_bottom = 0.929667
offset_right = -0.32
offset_bottom = 0.0999985
texture = ExtResource("3_a7hdw")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.843
anchor_top = 0.352
anchor_right = 0.843
anchor_bottom = 0.352
offset_left = -73.96
offset_top = -78.6
offset_right = 70.04
offset_bottom = 78.4
grow_horizontal = 0
rotation = -0.436332
pivot_offset = Vector2(74, 78)

[node name="BotaoAudio" type="Button" parent="AspectRatioContainer"]
layout_mode = 2
theme = ExtResource("5_iskqg")
text = "
"
autowrap_mode = 1
icon_alignment = 1
expand_icon = true
text_direction = 3
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer/BotaoAudio"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -90.0
offset_right = 90.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ehml4")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="."]
layout_mode = 2
anchor_left = -0.081
anchor_top = 0.25
anchor_right = 0.119
anchor_bottom = 0.773
offset_left = 0.32
offset_right = 0.32
offset_bottom = 0.100006

[node name="BotaoVoltar" type="Button" parent="AspectRatioContainer2"]
layout_mode = 2
theme = ExtResource("6_a7hdw")
text = "
"
autowrap_mode = 1
icon_alignment = 1
expand_icon = true
text_direction = 3
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer2/BotaoVoltar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -55.0
offset_right = 58.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_ehml4")
expand_mode = 1
metadata/_edit_lock_ = true

[connection signal="pressed" from="AspectRatioContainer/BotaoAudio" to="." method="_on_botao_audio_pressed"]
[connection signal="pressed" from="AspectRatioContainer2/BotaoVoltar" to="." method="_on_botao_voltar_pressed"]
